quilt the output

--- a/source/config.json
+++ b/source/config.json
@@ -8,11 +8,11 @@
     "keywords"    : ["tim", "timothy", "davenport", "resume", "profile", "website"],
     "changefreq"  : "monthly",
     "priority"    : "0.5",
-    "local"       : true,
+    "local"       : false,
     "patchcomment": true,
-    "quiltcomment": true,
+    "quiltcomment": false,
     "assetcomment": true,
-    "pagecomment" : true,
+    "pagecomment" : false,
     "pageobject"  : false,
     "buildblog"   : false,
     "buildatom"   : false,
