refined css, footer and home page

--- a/source/config.json
+++ b/source/config.json
@@ -18,5 +18,5 @@
     "buildatom"   : false,
     "buildrss"    : false,
     "copydate"    : 2015,
-    "copyrighter" : "tmthydvnprt"
+    "copyrighter" : "Timothy Davenport"
 }
