update styles and blog structure

--- a/source/config.json
+++ b/source/config.json
@@ -17,5 +17,6 @@
     "quiltcomment": false,
     "assetcomment": true,
     "pagecomment" : false,
-    "pageobject"  : false
+    "pageobject"  : false,
+    "local"       : true
 }
