--- a/source/config.json
+++ b/source/config.json
@@ -1,22 +1,23 @@
 {
-    "name"        : "tmthydvnprt",
-    "domain"      : "tmthydvnprt.com",
-    "title"       : "tim(othy)",
-    "author"      : "tmthydvnprt",
-    "email"       : "tim@tmthydvnprt.com",
-    "description" : "the internet-facing extension of my self",
-    "keywords"    : ["tim", "timothy", "davenport", "resume", "profile", "website"],
-    "changefreq"  : "monthly",
-    "priority"    : "0.5",
-    "blogname"    : "Autonomy &amp; Mastery",
-    "atomid"      : "randomid",
-    "rssid"       : "randomid",
-    "copydate"    : 2015,
-    "copyrighter" : "Timothy Davenport",
-    "patchcomment": true,
-    "quiltcomment": false,
-    "assetcomment": true,
-    "pagecomment" : false,
-    "pageobject"  : false,
-    "local"       : true
+    "name"           : "tmthydvnprt",
+    "domain"         : "tmthydvnprt.com",
+    "title"          : "tim(othy)",
+    "author"         : "tmthydvnprt",
+    "email"          : "tim@tmthydvnprt.com",
+    "description"    : "the internet-facing extension of my self",
+    "keywords"       : ["tim", "timothy", "davenport", "resume", "profile", "website"],
+    "changefreq"     : "monthly",
+    "priority"       : "0.5",
+    "blogtitle"      : "Autonomy &amp; Mastery",
+    "blogdescription": "A log of my travels thru python development, machine learning, personal finance and financial independence, in search of becoming awesome at convincing machines do what I want them to do.",
+    "atomid"         : "randomid",
+    "rssid"          : "randomid",
+    "copydate"       : 2015,
+    "copyrighter"    : "Timothy Davenport",
+    "patchcomment"   : true,
+    "quiltcomment"   : false,
+    "assetcomment"   : true,
+    "pagecomment"    : false,
+    "pageobject"     : false,
+    "local"          : true
 }
