update after review

--- a/source/config.json
+++ b/source/config.json
@@ -9,7 +9,7 @@
     "changefreq"  : "monthly",
     "priority"    : "0.5",
     "blogtitle"   : "Autonomy &amp; Mastery",
-    "blogsubtitle": "A log of my travels thru python development, machine learning, personal finance and financial independence, while in search of becoming awesome at convincing machines to do what I want.",
+    "blogsubtitle": "A log of my travels thru python development, machine learning, personal freedom and financial independence, while in search of becoming awesome at convincing machines to do cool things.",
     "atomid"      : "randomid",
     "rssid"       : "randomid",
     "copydate"    : 2015,
