update everything from testing and fixing bog branch

--- a/source/config.json
+++ b/source/config.json
@@ -4,12 +4,12 @@
     "title"       : "tim(othy)",
     "author"      : "tmthydvnprt",
     "email"       : "tim@tmthydvnprt.com",
-    "description" : "the internet-facing extension of my self",
+    "description" : "The internet facing extension of my self.",
     "keywords"    : ["tim", "timothy", "davenport", "resume", "profile", "website"],
     "changefreq"  : "monthly",
     "priority"    : "0.5",
-    "blogtitle"   : "Autonomy &amp; Mastery",
-    "blogsubtitle": "A log of my travels thru python development, machine learning, personal freedom and financial independence, while in search of becoming awesome at convincing machines to do cool things.",
+    "blogtitle"   : "Ah Ha!, Hmmm? or Ummm...",
+    "blogsubtitle": "A log of my travels thru fascination",
     "atomid"      : "randomid",
     "rssid"       : "randomid",
     "copydate"    : 2015,
