create blog page styles

--- a/source/config.json
+++ b/source/config.json
@@ -1,23 +1,26 @@
 {
-    "name"        : "tmthydvnprt",
-    "domain"      : "tmthydvnprt.com",
-    "title"       : "tim(othy)",
-    "author"      : "tmthydvnprt",
-    "email"       : "tim@tmthydvnprt.com",
-    "description" : "The internet facing extension of my self.",
-    "keywords"    : ["tim", "timothy", "davenport", "resume", "profile", "website"],
-    "changefreq"  : "monthly",
-    "priority"    : "0.5",
-    "blogtitle"   : "Ah Ha!, Hmmm? or Ummm...",
-    "blogsubtitle": "A log of my travels thru fascination",
-    "atomid"      : "randomid",
-    "rssid"       : "randomid",
-    "copydate"    : 2015,
-    "copyrighter" : "Timothy Davenport",
-    "patchcomment": true,
-    "quiltcomment": false,
-    "assetcomment": true,
-    "pagecomment" : false,
-    "pageobject"  : false,
-    "local"       : true
+    "name"          : "tmthydvnprt",
+    "domain"        : "tmthydvnprt.com",
+    "title"         : "tim(othy)",
+    "author"        : "tmthydvnprt",
+    "email"         : "tim@tmthydvnprt.com",
+    "twitter"       : "tmthydvnprt",
+    "github"        : "tmthydvnprt",
+    "stackoverflow" : "tmthydvnprt",
+    "description"   : "The internet facing extension of my self.",
+    "keywords"      : ["tim", "timothy", "davenport", "resume", "profile", "website"],
+    "changefreq"    : "monthly",
+    "priority"      : "0.5",
+    "blogtitle"     : "Something I Thought About",
+    "blogsubtitle"  : "Interesting or fascinating things.",
+    "atomid"        : "",
+    "rssid"         : "randomid",
+    "copydate"      : 2015,
+    "copyrighter"   : "Timothy Davenport",
+    "patchcomment"  : true,
+    "quiltcomment"  : false,
+    "assetcomment"  : true,
+    "pagecomment"   : false,
+    "pageobject"    : false,
+    "local"         : true
 }
