update resume and title

--- a/source/config.json
+++ b/source/config.json
@@ -1,7 +1,7 @@
 {
     "name"          : "tmthydvnprt",
     "domain"        : "tmthydvnprt.com",
-    "title"         : "tim(othy)",
+    "title"         : "tmthydvnprt",
     "author"        : "tmthydvnprt",
     "email"         : "tim@tmthydvnprt.com",
     "twitter"       : "tmthydvnprt",
